user account safety and font changes

--- a/style/master.sass
+++ b/style/master.sass
@@ -7,7 +7,8 @@ $color-primary-post-rgba-70-percent: rgba(0,45,118, 0.7)
 $color-secondary: #ffffff
 $color-text: #000
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans')
+@import url('https://fonts.googleapis.com/css?family=Arimo')
+$font-primary: 'Arimo'
 
 // Default
 
@@ -73,6 +74,15 @@ $color-text: #000
   color: $color-secondary
   border-radius: 30px
 
+.verification
+  position: fixed
+  display: none
+  top: 80px
+  height: 60vh
+  background-color: $color-primary-pre-gradient
+  color: $color-secondary
+  border-radius: 30px
+
 
 // Items
 
@@ -100,7 +110,7 @@ $color-text: #000
       display: inline
 
     label, input
-      font-family: 'Open Sans', sans-serif
+      font-family: $font-primary, sans-serif
       font-size: 16px
       letter-spacing: 0.5px
       line-height: 32px
@@ -119,7 +129,7 @@ $color-text: #000
 
     label, input
       display: block
-      font-family: 'Open Sans', sans-serif
+      font-family: $font-primary, sans-serif
       font-size: 16px
       letter-spacing: 0.5px
       line-height: 32px
@@ -132,7 +142,7 @@ $color-text: #000
 
     .force-header
       display: block
-      font-family: 'Open Sans', sans-serif
+      font-family: $font-primary, sans-serif
       font-size: 20px
       letter-spacing: 1px
       line-height: 30px
@@ -252,7 +262,7 @@ $color-text: #000
 // Text
 
 .banner-text
-  font-family: 'Open Sans', sans-serif
+  font-family: $font-primary, sans-serif
   font-weight: bold
   font-size: 38px
   letter-spacing: 1px
@@ -261,7 +271,7 @@ $color-text: #000
   -webkit-font-smoothing: antialiased
 
 .tag-text
-  font-family: 'Open Sans', sans-serif
+  font-family: $font-primary, sans-serif
   font-size: 32px
   letter-spacing: 1px
   line-height: 60px
@@ -269,7 +279,7 @@ $color-text: #000
   -webkit-font-smoothing: antialiased
 
 .minor-header
-  font-family: 'Open Sans', sans-serif
+  font-family: $font-primary, sans-serif
   font-size: 20px
   letter-spacing: 1px
   line-height: 30px
@@ -277,7 +287,7 @@ $color-text: #000
   -webkit-font-smoothing: antialiased
 
 .detail-text
-  font-family: 'Open Sans', sans-serif
+  font-family: $font-primary, sans-serif
   font-size: 16px
   letter-spacing: 0.5px
   line-height: 32px
@@ -307,7 +317,7 @@ $color-text: #000
     border-bottom: 1px solid transparent
 
 .gapped-text
-  font-family: 'Open Sans', sans-serif
+  font-family: $font-primary, sans-serif
   font-size: 16px
   letter-spacing: 1px
   line-height: 60px
