--- a/style/master.css
+++ b/style/master.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Arimo");
 * {
   margin: 0;
   padding: 0; }
@@ -55,6 +55,15 @@
   color: #ffffff;
   border-radius: 30px; }
 
+.verification {
+  position: fixed;
+  display: none;
+  top: 80px;
+  height: 60vh;
+  background-color: #0062ff;
+  color: #ffffff;
+  border-radius: 30px; }
+
 #vueform fieldset {
   border: none; }
 #vueform label {
@@ -70,7 +79,7 @@
 #vueform .radio-group input, #vueform .checkbox-label input {
   display: inline; }
 #vueform .radio-group label, #vueform .radio-group input, #vueform .checkbox-label label, #vueform .checkbox-label input {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Arimo", sans-serif;
   font-size: 16px;
   letter-spacing: 0.5px;
   line-height: 32px;
@@ -84,7 +93,7 @@
   margin-bottom: 10px; }
   #vueform .label-text label, #vueform .label-text input {
     display: block;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Arimo", sans-serif;
     font-size: 16px;
     letter-spacing: 0.5px;
     line-height: 32px;
@@ -95,7 +104,7 @@
     padding-right: 6px; }
   #vueform .label-text .force-header {
     display: block;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Arimo", sans-serif;
     font-size: 20px;
     letter-spacing: 1px;
     line-height: 30px;
@@ -195,7 +204,7 @@
   transition: all 200ms ease-in-out; }
 
 .banner-text {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Arimo", sans-serif;
   font-weight: bold;
   font-size: 38px;
   letter-spacing: 1px;
@@ -204,7 +213,7 @@
   -webkit-font-smoothing: antialiased; }
 
 .tag-text {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Arimo", sans-serif;
   font-size: 32px;
   letter-spacing: 1px;
   line-height: 60px;
@@ -212,7 +221,7 @@
   -webkit-font-smoothing: antialiased; }
 
 .minor-header {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Arimo", sans-serif;
   font-size: 20px;
   letter-spacing: 1px;
   line-height: 30px;
@@ -220,7 +229,7 @@
   -webkit-font-smoothing: antialiased; }
 
 .detail-text {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Arimo", sans-serif;
   font-size: 16px;
   letter-spacing: 0.5px;
   line-height: 32px;
@@ -246,7 +255,7 @@
     border-bottom: 1px solid transparent; }
 
 .gapped-text {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Arimo", sans-serif;
   font-size: 16px;
   letter-spacing: 1px;
   line-height: 60px;
