--- a/style/master.sass
+++ b/style/master.sass
@@ -28,6 +28,9 @@ $font-primary: 'Arimo'
 .flex-center
   justify-content: center
 
+.flex-between
+  justify-content: space-between
+
 .flex-end
   justify-content: flex-end
 
@@ -173,7 +176,7 @@ $font-primary: 'Arimo'
   .input-size-40
     width: 40em
 
-  @media only screen and (max-width: 540px)
+  @media only screen and (max-width: 850px)
     .input-size-5, .input-size-10, .input-size-20, .input-size-30, .input-size-40
       width: 100%
 
@@ -223,6 +226,9 @@ $font-primary: 'Arimo'
 
 .space-left-20px
   margin-left: 20px
+
+.space-bottom-40px
+  margin-bottom: 40px
 
 .space-top-60px
   margin-top: 60px
@@ -392,7 +398,7 @@ $font-primary: 'Arimo'
 
 // Nav
 
-@media only screen and (max-width: 540px)
+@media only screen and (max-width: 850px)
   #section-nav
     display: block
     margin-right: 0px
